# AP_meat_boy

./: CMakeLists.txt  Camera.cpp  Camera.h  Doxyfile  Observer.cpp  Observer.h  README.md  Stopwatch.cpp  Stopwatch.h  Values.cpp  main.cpp
.circleci/: config.yml
Game_logic/: CMakeLists.txt  Entity.cpp  Entity.h  Hitbox.cpp  Hitbox.h  Player.cpp  Player.h  World.cpp  World.h
Game_logic/Blocks/: Block.cpp  Block.h  Entity.cpp  Entity.h  Entity_factory.cpp  Entity_factory.h  Finish.cpp  Finish.h
Game_representation/: After_game_menu.cpp  After_game_menu.h  CMakeLists.txt  Dead_menu.cpp  Dead_menu.h  Finished_menu.cpp  Finished_menu.h  Game.cpp  Game.h  Level_selection.cpp  Level_selection.h  Main_menu.cpp  Main_menu.h  Menu.cpp  Menu.h  State.cpp  State.h  View.cpp  View.h  View_factory.cpp  View_factory.h
assets/levels/: README.md  level1 copy.json  level1.json  movingCameraTestLevel.json  presentation_level.json  sawTest.json  test.json  walljumptest.json
